# ubxlib_evk_applications

./: .gitmodules  README.md  common.cmake  setTTY2EVK.sh
cellular_tracker/: CMakeLists.txt  README.md  app.conf  config.txt
cellular_tracker/config/: README.md  config.h
cellular_tracker/src/: .gitignore  main.c
common/: NTPClient.c  appInit.c  appInit.h  buttons.c  cellInit.c  cellInit.h  common.c  common.h  configUtils.c  configUtils.h  fileSystem.c  fileSystem.h  log.c  log.h
tasks/: README.md  cellScanTask.c  cellScanTask.h  exampleTask.c  exampleTask.h  locationTask.c  locationTask.h  mqttTask.c  mqttTask.h  registrationTask.c  registrationTask.h  signalQualityTask.c  signalQualityTask.h  taskControl.c  taskControl.h
